cluster_configs/flux.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: flux
spec:
  ports:
  - name: memcached
    port: 11211
  selector:
    name: memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux
  namespace: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      name: flux
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "3031"
      labels:
        name: flux
    spec:
      containers:
      - args:
        - --manifest-generation=true
        - --memcached-hostname=memcached.flux
        - --memcached-service=
        - --ssh-keygen-dir=/var/fluxd/keygen
        - --git-branch=${flux_git_branch}
        - --git-path=${flux_git_path}
        - --git-user=${flux_git_user}
        - --git-email=${flux_git_user}@users.noreply.github.com
        - --git-url=${flux_git_url}
        - --manifest-generation=${flux_manifest_generation}
        image: docker.io/fluxcd/flux:1.20.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/flux/v6/identity.pub
            port: 3030
          initialDelaySeconds: 5
          timeoutSeconds: 5
        name: flux
        ports:
        - containerPort: 3030
        readinessProbe:
          httpGet:
            path: /api/flux/v6/identity.pub
            port: 3030
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - mountPath: /etc/fluxd/ssh
          name: git-key
          readOnly: true
        - mountPath: /var/fluxd/keygen
          name: git-keygen
      nodeSelector:
        beta.kubernetes.io/os: linux
      serviceAccountName: flux
      volumes:
      - name: git-key
        secret:
          defaultMode: 256
          secretName: flux-git-deploy
      - emptyDir:
          medium: Memory
        name: git-keygen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      name: memcached
  template:
    metadata:
      labels:
        name: memcached
    spec:
      containers:
      - args:
        - -m 512
        - -I 5m
        - -p 11211
        image: memcached:1.5.20
        imagePullPolicy: IfNotPresent
        name: memcached
        ports:
        - containerPort: 11211
          name: clients
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 11211
          runAsUser: 11211
      nodeSelector:
        beta.kubernetes.io/os: linux
